docs/api/qiskit/0.39/qiskit.algorithms.MinimumEigensolverResult.mdx
---
title: MinimumEigensolverResult (v0.39)
description: API reference for qiskit.algorithms.MinimumEigensolverResult in qiskit v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.MinimumEigensolverResult
---

# MinimumEigensolverResult

<Class id="qiskit.algorithms.MinimumEigensolverResult" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/algorithms/minimum_eigen_solvers/minimum_eigen_solver.py" signature="MinimumEigensolverResult" modifiers="class">
  Bases: `qiskit.algorithms.algorithm_result.AlgorithmResult`

  Pending deprecation: Minimum Eigensolver Result.

  The MinimumEigensolverResult class has been superseded by the [`qiskit.algorithms.minimum_eigensolvers.MinimumEigensolverResult`](qiskit.algorithms.minimum_eigensolvers.MinimumEigensolverResult "qiskit.algorithms.minimum_eigensolvers.MinimumEigensolverResult") class. This class will be deprecated in a future release and subsequently removed after that.

  ## Methods

  <span id="qiskit-algorithms-minimumeigensolverresult-combine" />

  ### combine

  <Function id="qiskit.algorithms.MinimumEigensolverResult.combine" signature="MinimumEigensolverResult.combine(result)">
    Any property from the argument that exists in the receiver is updated. :type result: `AlgorithmResult` :param result: Argument result with properties to be set.

    **Raises**

    **TypeError** – Argument is None

    **Return type**

    `None`
  </Function>

  ## Attributes

  ### aux\_operator\_eigenvalues

  <Attribute id="qiskit.algorithms.MinimumEigensolverResult.aux_operator_eigenvalues">
    Return aux operator expectation values.

    These values are in fact tuples formatted as (mean, standard deviation).

    **Return type**

    `Union`\[`List`\[`Optional`\[`Tuple`\[`complex`, `complex`]]], `Dict`\[`str`, `Tuple`\[`complex`, `complex`]], `None`]
  </Attribute>

  ### eigenstate

  <Attribute id="qiskit.algorithms.MinimumEigensolverResult.eigenstate">
    return eigen state

    **Return type**

    `Optional`\[`ndarray`]
  </Attribute>

  ### eigenvalue

  <Attribute id="qiskit.algorithms.MinimumEigensolverResult.eigenvalue">
    returns eigen value

    **Return type**

    `Optional`\[`complex`]
  </Attribute>
</Class>

